--- a/svxmon_settings.cfg
+++ b/svxmon_settings.cfg
@@ -1,6 +1,6 @@
 [Settings]
-token = 507070049:AAGlu8YVXifwzzbJsqeMxLQAoO_IUvla-Uw
-chid = 468273680
+token = здесь указать токен бота
+chid = здесь указать свой ID
 svxpath = //usr//bin//svxlink
 
 [Options]
