--- a/svxmon_settings.cfg
+++ b/svxmon_settings.cfg
@@ -1,6 +1,6 @@
 [Settings]
-token = здесь указать токен бота
-chid = здесь указать свой ID
+token = here to specify a bot token
+chid = here to specify your ID
 svxpath = //usr//bin//svxlink
 
 [Options]
